[project]
name = "classification-accusatory-judgments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imbalanced-learn>=0.14.1",
    "imblearn>=0.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "nltk>=3.9.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pip>=26.0.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "sentence-transformers>=5.4.1",
    "stanza>=1.11.1",
    "swifter[notebook]>=1.4.0",
    "symspellpy>=6.9.0",
    "wordcloud>=1.9.6",
]
